[package]
name = "faasten-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.102", features = ["derive"]}
labeled = { git = "https://github.com/alevy/labeled", features = ["buckle"] }
tikv-client = "0.3.0"
tokio = "1.41.1"
regex = "1.11.1"
serde_json = "1.0.132"
rand = "0.8.5"
lmdb-rkv = "0.14.0"
sha2 = "0.10.8"
log = "0.4.22"
lazy_static = "1.5.0"
serde_yaml = "0.9.34"
tempfile = "3.14.0"
hex = "0.4.3"
